# claude-glance

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  package.json  vite.config.js  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  deploy-pages.yml
docs/: index.html
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleanup.rs  lib.rs  main.rs  parser.rs  process.rs  scanner.rs  state.rs  watcher.rs
src/lib/: api.ts  clipboard.test.ts  clipboard.ts  grouping.test.ts  grouping.ts  stores.svelte.ts  time.test.ts  time.ts  types.test.ts  types.ts
src/lib/components/: RowMenu.svelte  SessionDetail.svelte  SessionRow.svelte  StatusGroup.svelte  StatusIcon.svelte
src/routes/: +layout.ts  +page.svelte
